feat: add a flag that indicates whether a tracker has reached the end of the log